--- a/Stap1/Keuken1.html
+++ b/Stap1/Keuken1.html
@@ -7,7 +7,7 @@
 </head>
 
 <body onload="hide()">
-
+    
     <style type="text/css">
         table.tableizer-table {
             font-size: 40px;
@@ -30,10 +30,7 @@
     </style>
 
     <div id="Resultaat">
-        <a id='meetLink'>Ga in deze google meet voor volgende ronde: </a>
-        </br>
-        <a href='../Stap1/Winkel1_1.html'>Speel verder op deze link</a>
-        
+        <a href='../Stap2/Toegangscode.html'>Speel verder op deze link</a>
     </div>
 
     <table class="tableizer-table centered">
