--- a/Stap1/Keuken2.html
+++ b/Stap1/Keuken2.html
@@ -32,7 +32,7 @@
     <div id="Resultaat">
         <a id='meetLink'>Ga in deze google meet voor volgende ronde: </a>
         </br>
-        <a href='../Stap1/Winkel1_1.html'>Speel verder op deze link</a>
+        <a href='../Stap2/Toegangscode.html'>Speel verder op deze link</a>
         
     </div>
 
