--- a/Stap1/Winkel1_1.html
+++ b/Stap1/Winkel1_1.html
@@ -13,9 +13,7 @@
     <button class=" btn btn-outline-primary" onclick="testInput()" type="button">test</button>
 
     <div id="Resultaat">
-        <a id='meetLink'>Ga in deze google meet voor volgende ronde: </a>
-        </br>
-        <a href='../Stap1/Winkel1_1.html'>Speel verder op deze link</a>
+        <a href='../Stap1/Keuken1.html'>Speel verder op deze link</a>
         </br>
         <a href="../Stap1/Winkel2_1.html">Help je teamgenoot om in de volgende ronde te raken via</a>
     </div>
