--- a/Stap0/Spel.html
+++ b/Stap0/Spel.html
@@ -76,19 +76,18 @@
                 case 'Philippe': $("#meetLink").attr("href", "https://meet.google.com/xfu-eabb-qio"); $("#spelLink").attr("href", "../Stap1/Winkel1_1.html"); break;
                 case 'Elise': $("#meetLink").attr("href", "https://meet.google.com/xfu-eabb-qio"); $("#spelLink").attr("href", "../Stap1/Winkel2_1.html"); break;
                 case 'Zoe': $("#meetLink").attr("href", "https://meet.google.com/wcy-wqkm-xvo"); $("#spelLink").attr("href", "../Stap1/Winkel1_1.html"); break;
-                case 'Joppe': $("#meetLink").attr("href", "https://meet.google.com/wcy-wqkm-xvo"); $("#spelLink").attr("href", "../Stap1/Winkel2_1.html"); break;
+                case 'Lenny': $("#meetLink").attr("href", "https://meet.google.com/wcy-wqkm-xvo"); $("#spelLink").attr("href", "../Stap1/Winkel2_1.html"); break;
                 case 'Margot': $("#meetLink").attr("href", "https://meet.google.com/sxq-ddxf-xhp"); $("#spelLink").attr("href", "../Stap1/Winkel1_1.html"); break;
-                case 'Lenny': $("#meetLink").attr("href", "https://meet.google.com/sxq-ddxf-xhp"); $("#spelLink").attr("href", "../Stap1/Winkel2_1.html"); break;
-                case 'Liesl': $("#meetLink").hide(); $('#extra').append(blok1Code); $("#spelLink").attr("href", "../Stap2/GroteZaal.html"); break;
+                case 'Liesl': $("#meetLink").attr("href", "https://meet.google.com/sxq-ddxf-xhp"); $("#spelLink").attr("href", "../Stap1/Winkel2_1.html"); break;
+                case 'Joppe': $("#meetLink").hide(); $('#extra').append(blok1Code); $("#spelLink").attr("href", "../Stap2/GroteZaal.html"); break;
 
                 case 'Davey': $("#meetLink").attr("href", "https://meet.google.com/sis-nivt-hfh"); $("#spelLink").attr("href", "../Stap1/Winkel1_1.html"); break;
-                case 'Marec': $("#meetLink").attr("href", "https://meet.google.com/sis-nivt-hfh"); $("#spelLink").attr("href", "../Stap1/Winkel2_1.html"); break;
+                case 'Mathias': $("#meetLink").attr("href", "https://meet.google.com/sis-nivt-hfh"); $("#spelLink").attr("href", "../Stap1/Winkel2_1.html"); break;
                 case 'Kiara': $("#meetLink").attr("href", "https://meet.google.com/ijn-yemm-jon"); $("#spelLink").attr("href", "../Stap1/Winkel1_1.html"); break;
                 case 'Laura': $("#meetLink").attr("href", "https://meet.google.com/ijn-yemm-jon"); $("#spelLink").attr("href", "../Stap1/Winkel2_1.html"); break;
                 case 'Kejll': $("#meetLink").attr("href", "https://meet.google.com/iuc-zirj-dko"); $("#spelLink").attr("href", "../Stap1/Winkel1_1.html"); break;
-                case 'Mathias': $("#meetLink").attr("href", "https://meet.google.com/iuc-zirj-dko"); $("#spelLink").attr("href", "../Stap1/Winkel2_1.html"); break;
-                case 'Liesl': $("#meetLink").hide(); $('#extra').append(blok2Code);$("#spelLink").attr("href", "../Stap2/GroteZaal.html"); break;
-
+                case 'Kimberly': $("#meetLink").attr("href", "https://meet.google.com/iuc-zirj-dko"); $("#spelLink").attr("href", "../Stap1/Winkel2_1.html"); break;
+                case 'Marec': $("#meetLink").hide(); $('#extra').append(blok2Code);$("#spelLink").attr("href", "../Stap2/GroteZaal.html"); break;
             }
         }
 
