--- a/Stap1/Keuken2.html
+++ b/Stap1/Keuken2.html
@@ -29,10 +29,8 @@
         }
     </style>
 
-    <div id="Resultaat">
-        <a id='meetLink'>Ga in deze google meet voor volgende ronde: </a>
-        </br>
-        <a href='../Stap2/Toegangscode.html'>Speel verder op deze link</a>
+    <div id="Resultaat" style="background-color: red;">
+        <a href='../Stap2/Toegangscode.html' style="color: white;">Speel verder op deze link</a>
         
     </div>
 
