--- a/Stap2/GroteZaal.html
+++ b/Stap2/GroteZaal.html
@@ -7,16 +7,14 @@
 </head>
 
 <body onload="test()">
-    <img src="../Backgrounds/GroteZaal.jpg" id="filledbg" alt="">
     <div class='centered' id='Rest'>
-        <p  style="background-color: white;">Laat de timer exact op 463 stoppen</p>
-        <br>
-        <p id='number' style="background-color: white;">0</p>
+        <p >Laat de timer exact op 163 stoppen</p>
+        <p id='number' >0</p>
         <button class=" btn btn-outline-primary" onclick="togglechange()" type="button">Stop</button>
     </div>
 
     <div class='centered' id='Resultaat'>
-        <p  style="background-color: white;">Link</p>
+        <a href="../Stap3/Buiten.html"> Ga naar volgend spel</a>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -27,35 +25,73 @@
         integrity="sha384-LtrjvnR4Twt/qOuYxE721u19sVFLVSA4hf/rRt6PrZTmiPltdZcI7q7PXQBYTKyf"
         crossorigin="anonymous"></script>
 
-        <script>
-            toggled = false;
-            counter = 0;
+    <script>
+        toggled = false;
+        counter = 0;
+        clickCounter = 0;
+        feestje = false;
 
-            function togglechange(){
-                toggled = !toggled;
-                if(counter == 499){
-                    $("#Resultaat").show()
-                    $("#Rest").hide()
-                }
+        function togglechange() {
+            toggled = !toggled;
+            clickCounter++
+            console.log(clickCounter)
+            if(clickCounter == 10){
+                alert('Zin in een feestje?')
+            }
+            if (clickCounter > 10 && clickCounter < 30) {
+                feestje = true;
+            }
+            else {
+                feestje = false;
             }
 
-            function change() {
-                if(!toggled){
-                    $("#number").text(counter) 
-                    counter = counter + 1
-                    if(counter == 503){
-                        counter = 0
-                    }
+            if (counter == 163) {
+                $("#Resultaat").show()
+                $("#Rest").hide()
+            }
+        }
+
+        function change() {
+            if (!toggled) {
+                $("#number").text(counter)
+                counter = counter + 1
+                if (counter == 203) {
+                    counter = 0
                 }
             }
+        }
 
-            function test() {
+        function test() {
             $("#Resultaat").hide()
-
+            startBGChange()
             setInterval(function () {
                 change()
             }, 10);
         }
-        </script>
+
+
+        function changeBackround() {
+            var r = Math.round(Math.random() * 254);
+            var g = Math.round(Math.random() * 254);
+            var b = Math.round(Math.random() * 254);
+
+            var r1 = Math.round(Math.random() * 254);
+            var g1 = Math.round(Math.random() * 254);
+            var b1 = Math.round(Math.random() * 254);
+            console.log("started")
+            $("body").css("background-color", "rgb(" + r + "," + g + "," + b + ")")
+            $("p").css("color", "rgb(" + r1 + "," + g1 + "," + b1 + ")")
+        }
+
+        function startBGChange() {
+            setInterval(function () {
+                if (feestje) {
+                    changeBackround()
+                }
+            }, 5);
+        }
+
+    </script>
 </body>
+
 </html>
