--- a/Stap3/Buiten.html
+++ b/Stap3/Buiten.html
@@ -9,8 +9,9 @@
 <body onload="hide()">
     <img src="../Backgrounds/Buiten.jpg" id="filledbg" alt="">
     <div class="centered" style="background-color: white;">
+        <p id='vraag'>Waaronder stond Wally in het doolhof?</p>
         <input type="text" id="input" name="input">
-        <button id='test1' class=" btn btn-outline-primary" onclick="testInput()" type="button">test</button>
+        <button id='test1' class=" btn btn-outline-primary" onclick="testInput()" type="button">Bevestig</button>
 
         <div id='Resultaat'>
             <iframe class='' width="100%" height="450" frameborder="0" style="border:0"
@@ -21,17 +22,11 @@
                 over het kruispunt, rechtdoor, links, bij het huis met de groene imog vuilbak, hoeveel stukken was
                 hangen er hier aan de draad? </p>
             <input type="text" id="input2" name="input">
-            <button id='test2' class=" btn btn-outline-primary" onclick="testInput2()" type="button">test</button>
+            <button id='test2' class=" btn btn-outline-primary" onclick="testInput2()" type="button">Bevestig</button>
             <p id="Fout2" style="color: red;">Fout</p>
         </div>
 
         <div id='Resultaat2' style="background-color: white;">
-            <a href="">Link naar de meet van team1</a>
-            </br>
-            <a href="">Link naar de meet van team2</a>
-            </br>
-            <a href="">Link naar de meet van team3</a>
-            </br>
             <a href="../Stap2/Toegangscode.html">Link naar het volgende spel</a>
             </br>
         </div>
@@ -56,11 +51,12 @@
         }
 
         function testInput() {
-            if ($("#input").val() === "A4" || $("#input").val() === "a4") {
+            if ($("#input").val() === "handschoen" || $("#input").val() === "Handschoen") {
                 $("#Resultaat").show()
                 $("#Fout").hide()
                 $("#input").hide()
                 $('#test1').hide()
+                $('#vraag').hide()
             }
             else {
                 $("#Fout").show()
