--- a/Stap1/Keuken1.html
+++ b/Stap1/Keuken1.html
@@ -29,7 +29,7 @@
         }
     </style>
 
-    <div id="Resultaat">
+    <div id="Resultaat" style="background-color: red;">
         <a href='../Stap2/Toegangscode.html'>Speel verder op deze link</a>
     </div>
 
