--- a/Stap1/Winkel1_1.html
+++ b/Stap1/Winkel1_1.html
@@ -10,7 +10,7 @@
     <img src="../Images/Waldo1.jpg" id="bg" alt="">
     <h3>Wat is het voorwerp boven het hoofd van Wally?</h3>
     <input type="text" id="input" name="input">
-    <button class=" btn btn-outline-primary" onclick="testInput()" type="button">test</button>
+    <button class=" btn btn-outline-primary" onclick="testInput()" type="button">Bevestig</button>
 
     <div id="Resultaat">
         <a href='../Stap1/Keuken1.html'>Speel verder op deze link</a>
