--- a/Stap1/Winkel2_1.html
+++ b/Stap1/Winkel2_1.html
@@ -11,7 +11,7 @@
     <h3>Waartussen bevind het hoofd van Wally zich op deze figuur?</h3>
 
     <input type="text" id="input" name="input">
-    <button class=" btn btn-outline-primary" onclick="testInput()" type="button">test</button>
+    <button class=" btn btn-outline-primary" onclick="testInput()" type="button">Bevestig</button>
 
     <div id="Resultaat">
         <a href='../Stap1/Keuken1.html'>Speel verder op deze link</a>
