--- a/Stap2/GroteZaal.html
+++ b/Stap2/GroteZaal.html
@@ -45,7 +45,8 @@
                 feestje = false;
             }
 
-            if (counter == 163) {
+            console.log(counter)
+            if (counter == 164) {
                 $("#Resultaat").show()
                 $("#Rest").hide()
             }
@@ -66,7 +67,7 @@
             startBGChange()
             setInterval(function () {
                 change()
-            }, 10);
+            }, 50);
         }
 
 
