--- a/index.html
+++ b/index.html
@@ -24,86 +24,86 @@
             <div class="row justify-content-center align-items-center">
                 <div class="col mr-5 justify-content-center align-items-center">
                     <div class="row justify-content-center align-items-center">
-                        <button class="btn btn-outline-primary"
+                        <button class="btn btn-secondary"
                             onclick="location.href=`./Stap0/Spel.html?user=Philippe`" type="button">Philippe</button>
                     </div>
                     </br>
 
                     <div class="row justify-content-center align-items-center">
-                        <button class="btn btn-outline-primary"
+                        <button class="btn btn-secondary"
                             onclick="location.href=`./Stap0/Spel.html?user=Kiara`" type="button">Elise</button>
                     </div>
                     </br>
 
                     <div class="row justify-content-center align-items-center">
-                        <button class="btn btn-outline-primary"
+                        <button class="btn btn-secondary"
                             onclick="location.href=`./Stap0/Spel.html?user=Zoe`" type="button">Zoë</button>
                     </div>
                     </br>
 
                     <div class="row justify-content-center align-items-center">
-                        <button class="btn btn-outline-primary"
+                        <button class="btn btn-secondary"
                             onclick="location.href=`./Stap0/Spel.html?user=Joppe`" type="button">Joppe</button>
                     </div>
                     </br>
 
                     <div class="row justify-content-center align-items-center">
-                        <button class="btn btn-outline-primary"
+                        <button class="btn btn-secondary"
                             onclick="location.href=`./Stap0/Spel.html?user=Margot`" type="button">Margot</button>
                     </div>
                     </br>
 
                     <div class="row justify-content-center align-items-center">
-                        <button class="btn btn-outline-primary"
+                        <button class="btn btn-secondary"
                             onclick="location.href=`./Stap0/Spel.html?user=Lenny`" type="button">Lenny</button>
                     </div>
                     </br>
 
                     <div class="row justify-content-center align-items-center">
-                        <button class="btn btn-outline-primary"
+                        <button class="btn btn-secondary"
                             onclick="location.href=`./Stap0/Spel.html?user=Liesl`" type="button">Liesl</button>
                     </div>
 
                 </div>
                 <div class="col">
                     <div class="row justify-content-center align-items-center">
-                        <button class="btn btn-outline-primary"
+                        <button class="btn btn-secondary"
                             onclick="location.href=`./Stap0/Spel.html?user=Davey`" type="button">Davey</button>
                     </div>
                     </br>
 
                     <div class="row justify-content-center align-items-center">
-                        <button class="btn btn-outline-primary"
+                        <button class="btn btn-secondary"
                             onclick="location.href=`./Stap0/Spel.html?user=Marec`" type="button">Marec</button>
                     </div>
                     </br>
 
                     <div class="row justify-content-center align-items-center">
-                        <button class="btn btn-outline-primary"
+                        <button class="btn btn-secondary"
                             onclick="location.href=`./Stap0/Spel.html?user=Elise`" type="button">Kiara</button>
                     </div>
                     </br>
 
                     <div class="row justify-content-center align-items-center">
-                        <button class="btn btn-outline-primary"
+                        <button class="btn btn-secondary"
                             onclick="location.href=`./Stap0/Spel.html?user=Laura`" type="button">Laura</button>
                     </div>
                     </br>
 
                     <div class="row justify-content-center align-items-center">
-                        <button class="btn btn-outline-primary"
+                        <button class="btn btn-secondary"
                             onclick="location.href=`./Stap0/Spel.html?user=Kejll`" type="button">Kejll</button>
                     </div>
                     </br>
 
                     <div class="row justify-content-center align-items-center">
-                        <button class="btn btn-outline-primary"
+                        <button class="btn btn-secondary"
                             onclick="location.href=`./Stap0/Spel.html?user=Mathias`" type="button">Mathias</button>
                     </div>
                     </br>
 
                     <div class="row justify-content-center align-items-center">
-                        <button class="btn btn-outline-primary"
+                        <button class="btn btn-secondary"
                             onclick="location.href=`./Stap0/Spel.html?user=Kimberly`" type="button">Kimberly</button>
                     </div>
                 </div>
