--- a/Stap1/Keuken2.html
+++ b/Stap1/Keuken2.html
@@ -30,7 +30,7 @@
     </style>
 
     <div id="Resultaat" style="background-color: red;">
-        <a href='../Stap2/Toegangscode.html' style="color: white;">Speel verder op deze link</a>
+        <a href='../Stap2/GroteZaal.html' style="color: white;">Speel verder op deze link</a>
         
     </div>
 
