--- a/Stap3/final.html
+++ b/Stap3/final.html
@@ -25,7 +25,7 @@
             <p id="Fout">De verkeerde link</p>
         </div>
         <div id="Resultaat">
-            <h3>Proficiat, jullie zijn er geraakt! Stuur een screenshot van dit scherm naar Matthijs en kom te weten of jullie gewonnen hebben!</h3>
+            <h3>Proficiat, jullie zijn er geraakt! Stuur een screenshot van dit scherm naar Matthijs en kom te weten of jullie gewonnen hebben! Kom gerust terug naar volgende <a href="https://meet.google.com/zuw-xrmn-fkh">link</a></h3>
         </div>
     </div>
 
