--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="d-flex justify-content-center align-items-center" style="height:500px;">
         <div class="centered">
             <div class="row">
-                <h1>De speelberg escape game</h1>
+                <h1>De speelberg escape game/online parcours</h1>
                 </br>
                 </br>
                 </br>
